...
                                .modifier(active: _RotationEffect(angle: .degrees(40)),
                                          identity: _RotationEffect(angle: .degrees(0))).combined(with: .opacity))
                    }
                }
        }
        .matchedGeometryEffect(id: "home.button", in: viewModel.sharedNamespace)
        .accessibilityLabel("Home")
    }
}

